--- a/src/components/Grid/Grid.module.css
+++ b/src/components/Grid/Grid.module.css
@@ -7,15 +7,16 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    width: 290px;
-    height: 800px;
+    width: 220px;
+    min-height: 680px;
+    max-height: calc(100vh - 100px);
     padding: 0 50px;
 }
 
 .navList {
     display: flex;
     flex-direction: column;
-    gap: 30px;
+    gap: 20px;
     list-style: none;
     margin: 0;
     padding: 0;
@@ -118,6 +119,13 @@
 .df {
     display: flex;
     align-items: center;
-    max-width: 210px;
+    max-width: 212px;
     justify-content: space-between;
 }
+
+.gap {
+    display: flex;
+    gap: 4px;
+}
+
+
